maybe fixing the stretched background

--- a/Shared/MainLayout.razor.css
+++ b/Shared/MainLayout.razor.css
@@ -8,9 +8,6 @@
 }
 
 .sidebar {
-    background-image: url('https://cosmosdex.com/images/ectimage/other/farbackgroundblack.png');
-    background-repeat: repeat;
-    background-size: 400px 400px;
 }
 
 .top-row {
@@ -59,6 +56,8 @@
     }
 
     .sidebar {
+        background-image: url('https://cosmosdex.com/images/ectimage/other/farbackgroundblack.png');
+        background-repeat: repeat;
         width: 250px;
         height: 250px;
         position: sticky;
